// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pbehaviors-simple-list Renders \`pbehaviors-simple-list\` with pbehaviors 1`] = `
<div
  class="layout column"
>
  <div
    class="layout row justify-end"
  >
    <c-action-fab-btn-stub
      class="ma-0"
      color="primary"
      icon="add"
      left="left"
      small="small"
      tooltip="Create periodical behavior"
    />
    <c-action-fab-btn-stub
      class="ma-0"
      color="secondary"
      icon="calendar_today"
      left="left"
      small="small"
      tooltip="Periodic behaviors"
    />
  </div>
  <div
    class="c-advanced-data-table ma-0"
  >
    <div
      class="layout row wrap"
    >
      <!---->
      <!---->
    </div>
    <div>
      <div
        class="v-table__overflow"
      >
        <table
          class="v-datatable v-table theme--light"
        >
          <thead>
            <tr>
              <th
                aria-label="Name: Sorted ascending. Activate to sort descending."
                aria-sort="ascending"
                class="column active asc sortable text-xs-left"
                data-value="name"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  Name
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light v-datatable-header__icon"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Author: Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="column sortable text-xs-left"
                data-value="author.display_name"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  Author
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light v-datatable-header__icon"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Is enabled: Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="column sortable text-xs-left"
                data-value="enabled"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  Is enabled
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light v-datatable-header__icon"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Begins: Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="column sortable text-xs-left"
                data-value="tstart"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  Begins
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light v-datatable-header__icon"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Ends: Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="column sortable text-xs-left"
                data-value="tstop"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  Ends
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light v-datatable-header__icon"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="End of recurrence: Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="column sortable text-xs-left"
                data-value="rrule_end"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  End of recurrence
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light v-datatable-header__icon"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Recurrence: Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="column sortable text-xs-left"
                data-value="rrule"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  Recurrence
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light v-datatable-header__icon"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Type: Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="column sortable text-xs-left"
                data-value="type.name"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  Type
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light v-datatable-header__icon"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Reason: Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="column sortable text-xs-left"
                data-value="reason.name"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  Reason
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light v-datatable-header__icon"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Icon: Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="column sortable text-xs-left"
                data-value="icon"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  Icon
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light v-datatable-header__icon"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Status: Not sorted."
                aria-sort="none"
                class="column text-xs-left"
                data-value="status"
                role="columnheader"
                scope="col"
              >
                <div
                  class="layout align-center"
                >
                  Status
                </div>
              </th>
              <th
                aria-label="Actions: Not sorted."
                aria-sort="none"
                class="column text-xs-left"
                data-value="actions"
                role="columnheader"
                scope="col"
              >
                <div
                  class="layout align-center"
                >
                  Actions
                </div>
              </th>
            </tr>
            <tr
              class="v-datatable__progress"
            >
              <th
                class="column"
                colspan="12"
              />
            </tr>
          </thead>
          <tbody>
            <tr>
              <!---->
              <td>
                name-0
              </td>
              <td>
                author-0
              </td>
              <td>
                <c-enabled-stub />
              </td>
              <td>
                04/03/2021 13:30:00
              </td>
              <td>
                04/03/2021 13:33:20
              </td>
              <td>
                -
              </td>
              <td>
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  clear
                </i>
              </td>
              <td>
                type-name-0
              </td>
              <td>
                reason-name-0
              </td>
              <td>
                <i
                  aria-hidden="true"
                  class="v-icon type type-icon-name-0 theme--light primary--text"
                />
              </td>
              <td>
                <svg
                  aria-hidden="true"
                  class="settings-sync-svg-icon v-icon v-icon--is-component theme--light primary--text"
                  version="1.1"
                  viewBox="0 0 57 50"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="surface1"
                  >
                    <path
                      d="M 23.164062 0.632812 C 16.117188 2.175781 10.007812 7.042969 6.503906 13.925781 C 4.554688 17.800781
    4.59375 18.195312 6.929688 18.195312 L 8.761719 18.195312 L 10.121094 15.507812 C 10.941406 13.882812 12.460938
    11.828125 14.054688 10.167969 C 21.804688 2.253906 34.183594 1.976562 42.242188 9.574219 C 44.425781 11.628906
    47.5 16.140625 47.5 17.285156 C 47.5 17.640625 46.839844 17.800781 45.359375 17.800781 C 44.191406 17.800781
    43.21875 17.878906 43.21875 17.957031 C 43.21875 18.078125 44.8125 19.738281 46.800781 21.675781 L 50.382812
    25.199219 L 53.417969 21.28125 C 55.09375 19.105469 56.453125 17.246094 56.453125 17.128906 C 56.453125 17.007812
    55.441406 17.007812 54.234375 17.167969 L 51.976562 17.40625 L 50.535156 14.320312 C 45.554688 3.757812 34.457031
    -1.78125 23.164062 0.632812 Z M 23.164062 0.632812 "
                    />
                     
                    <path
                      d="M 25.308594 11.234375 C 25.308594 13.371094 25.269531 13.410156 23.90625 13.84375 C 22.542969 14.320312
    22.425781 14.28125 21.101562 12.894531 L 19.660156 11.472656 L 17.441406 13.726562 L 15.183594 15.980469
    L 16.585938 17.445312 C 17.949219 18.867188 17.988281 18.988281 17.519531 20.332031 C 17.09375 21.714844
    17.054688 21.757812 14.949219 21.757812 L 12.847656 21.757812 L 12.847656 28.085938 L 14.949219 28.085938
    C 17.054688 28.085938 17.09375 28.125 17.519531 29.507812 C 17.988281 30.894531 17.949219 31.011719 16.585938
    32.359375 L 15.183594 33.820312 L 17.402344 36.074219 L 19.621094 38.371094 L 21.0625 36.945312 C 22.464844
    35.5625 22.582031 35.523438 23.90625 35.996094 C 25.269531 36.433594 25.308594 36.472656 25.308594 38.609375
    L 25.308594 40.742188 L 31.535156 40.742188 L 31.535156 38.609375 C 31.535156 36.472656 31.574219 36.433594
    32.9375 35.996094 C 34.261719 35.523438 34.378906 35.5625 35.78125 36.945312 L 37.222656 38.371094 L 39.441406
    36.074219 L 41.660156 33.820312 L 40.257812 32.359375 C 38.894531 31.011719 38.855469 30.894531 39.324219
    29.507812 C 39.753906 28.125 39.789062 28.085938 41.894531 28.085938 L 43.996094 28.085938 L 43.996094
    21.757812 L 41.894531 21.757812 C 39.789062 21.757812 39.753906 21.714844 39.324219 20.332031 C 38.855469
    18.988281 38.894531 18.867188 40.257812 17.445312 L 41.660156 15.980469 L 39.402344 13.726562 L 37.183594
    11.472656 L 35.742188 12.894531 C 34.417969 14.28125 34.300781 14.320312 32.9375 13.84375 C 31.574219 13.410156
    31.535156 13.371094 31.535156 11.234375 L 31.535156 9.097656 L 25.308594 9.097656 Z M 31.460938 17.601562
    C 35.507812 19.34375 37.339844 24.207031 35.46875 28.285156 C 32.703125 34.335938 24.140625 34.335938 21.375
    28.285156 C 20.089844 25.433594 20.636719 21.714844 22.699219 19.421875 C 24.722656 17.207031 28.578125
    16.417969 31.460938 17.601562 Z M 31.460938 17.601562 "
                    />
                     
                    <path
                      d="M 3.699219 28.164062 C -0.195312 33.265625 -0.117188 32.992188 2.570312 32.675781 L 4.867188 32.4375
    L 6.308594 35.523438 C 8.761719 40.664062 12.730469 44.777344 17.675781 47.230469 C 29.863281 53.242188
    44.074219 48.339844 50.34375 35.917969 C 52.289062 32.042969 52.25 31.644531 49.953125 31.644531 L 48.085938
    31.644531 L 46.722656 34.335938 C 45.902344 35.957031 44.386719 38.015625 42.789062 39.675781 C 35.039062
    47.585938 22.660156 47.863281 14.601562 40.269531 C 12.421875 38.210938 9.34375 33.703125 9.34375 32.554688
    C 9.34375 32.199219 10.007812 32.042969 11.523438 32.042969 C 12.730469 32.042969 13.628906 31.921875
    13.550781 31.726562 C 13.511719 31.566406 11.875 29.90625 9.929688 28.046875 L 6.425781 24.605469
    Z M 3.699219 28.164062 "
                    />
                  </g>
                </svg>
              </td>
              <td>
                <pbehavior-actions-stub
                  pbehavior="[object Object]"
                  removable="true"
                  updatable="true"
                />
              </td>
            </tr>
            <tr>
              <!---->
              <td>
                name-1
              </td>
              <td>
                author-1
              </td>
              <td>
                <c-enabled-stub
                  value="true"
                />
              </td>
              <td>
                04/03 13:30
              </td>
              <td>
                04/03 13:33
              </td>
              <td>
                04/03/2021 13:44:49
              </td>
              <td>
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  check
                </i>
              </td>
              <td>
                type-name-1
              </td>
              <td>
                reason-name-1
              </td>
              <td>
                <i
                  aria-hidden="true"
                  class="v-icon type type-icon-name-1 theme--light primary--text"
                />
              </td>
              <td>
                <svg
                  aria-hidden="true"
                  class="settings-sync-svg-icon v-icon v-icon--is-component theme--light error--text"
                  version="1.1"
                  viewBox="0 0 57 50"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="surface1"
                  >
                    <path
                      d="M 23.164062 0.632812 C 16.117188 2.175781 10.007812 7.042969 6.503906 13.925781 C 4.554688 17.800781
    4.59375 18.195312 6.929688 18.195312 L 8.761719 18.195312 L 10.121094 15.507812 C 10.941406 13.882812 12.460938
    11.828125 14.054688 10.167969 C 21.804688 2.253906 34.183594 1.976562 42.242188 9.574219 C 44.425781 11.628906
    47.5 16.140625 47.5 17.285156 C 47.5 17.640625 46.839844 17.800781 45.359375 17.800781 C 44.191406 17.800781
    43.21875 17.878906 43.21875 17.957031 C 43.21875 18.078125 44.8125 19.738281 46.800781 21.675781 L 50.382812
    25.199219 L 53.417969 21.28125 C 55.09375 19.105469 56.453125 17.246094 56.453125 17.128906 C 56.453125 17.007812
    55.441406 17.007812 54.234375 17.167969 L 51.976562 17.40625 L 50.535156 14.320312 C 45.554688 3.757812 34.457031
    -1.78125 23.164062 0.632812 Z M 23.164062 0.632812 "
                    />
                     
                    <path
                      d="M 25.308594 11.234375 C 25.308594 13.371094 25.269531 13.410156 23.90625 13.84375 C 22.542969 14.320312
    22.425781 14.28125 21.101562 12.894531 L 19.660156 11.472656 L 17.441406 13.726562 L 15.183594 15.980469
    L 16.585938 17.445312 C 17.949219 18.867188 17.988281 18.988281 17.519531 20.332031 C 17.09375 21.714844
    17.054688 21.757812 14.949219 21.757812 L 12.847656 21.757812 L 12.847656 28.085938 L 14.949219 28.085938
    C 17.054688 28.085938 17.09375 28.125 17.519531 29.507812 C 17.988281 30.894531 17.949219 31.011719 16.585938
    32.359375 L 15.183594 33.820312 L 17.402344 36.074219 L 19.621094 38.371094 L 21.0625 36.945312 C 22.464844
    35.5625 22.582031 35.523438 23.90625 35.996094 C 25.269531 36.433594 25.308594 36.472656 25.308594 38.609375
    L 25.308594 40.742188 L 31.535156 40.742188 L 31.535156 38.609375 C 31.535156 36.472656 31.574219 36.433594
    32.9375 35.996094 C 34.261719 35.523438 34.378906 35.5625 35.78125 36.945312 L 37.222656 38.371094 L 39.441406
    36.074219 L 41.660156 33.820312 L 40.257812 32.359375 C 38.894531 31.011719 38.855469 30.894531 39.324219
    29.507812 C 39.753906 28.125 39.789062 28.085938 41.894531 28.085938 L 43.996094 28.085938 L 43.996094
    21.757812 L 41.894531 21.757812 C 39.789062 21.757812 39.753906 21.714844 39.324219 20.332031 C 38.855469
    18.988281 38.894531 18.867188 40.257812 17.445312 L 41.660156 15.980469 L 39.402344 13.726562 L 37.183594
    11.472656 L 35.742188 12.894531 C 34.417969 14.28125 34.300781 14.320312 32.9375 13.84375 C 31.574219 13.410156
    31.535156 13.371094 31.535156 11.234375 L 31.535156 9.097656 L 25.308594 9.097656 Z M 31.460938 17.601562
    C 35.507812 19.34375 37.339844 24.207031 35.46875 28.285156 C 32.703125 34.335938 24.140625 34.335938 21.375
    28.285156 C 20.089844 25.433594 20.636719 21.714844 22.699219 19.421875 C 24.722656 17.207031 28.578125
    16.417969 31.460938 17.601562 Z M 31.460938 17.601562 "
                    />
                     
                    <path
                      d="M 3.699219 28.164062 C -0.195312 33.265625 -0.117188 32.992188 2.570312 32.675781 L 4.867188 32.4375
    L 6.308594 35.523438 C 8.761719 40.664062 12.730469 44.777344 17.675781 47.230469 C 29.863281 53.242188
    44.074219 48.339844 50.34375 35.917969 C 52.289062 32.042969 52.25 31.644531 49.953125 31.644531 L 48.085938
    31.644531 L 46.722656 34.335938 C 45.902344 35.957031 44.386719 38.015625 42.789062 39.675781 C 35.039062
    47.585938 22.660156 47.863281 14.601562 40.269531 C 12.421875 38.210938 9.34375 33.703125 9.34375 32.554688
    C 9.34375 32.199219 10.007812 32.042969 11.523438 32.042969 C 12.730469 32.042969 13.628906 31.921875
    13.550781 31.726562 C 13.511719 31.566406 11.875 29.90625 9.929688 28.046875 L 6.425781 24.605469
    Z M 3.699219 28.164062 "
                    />
                  </g>
                </svg>
              </td>
              <td>
                <pbehavior-actions-stub
                  pbehavior="[object Object]"
                  removable="true"
                  updatable="true"
                />
              </td>
            </tr>
            <tr>
              <!---->
              <td>
                name-2
              </td>
              <td>
                author-2
              </td>
              <td>
                <c-enabled-stub />
              </td>
              <td>
                04/03/2021 13:30:02
              </td>
              <td>
                04/03/2021 13:33:22
              </td>
              <td>
                -
              </td>
              <td>
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  clear
                </i>
              </td>
              <td>
                type-name-2
              </td>
              <td>
                reason-name-2
              </td>
              <td>
                <i
                  aria-hidden="true"
                  class="v-icon type type-icon-name-2 theme--light primary--text"
                />
              </td>
              <td>
                <svg
                  aria-hidden="true"
                  class="settings-sync-svg-icon v-icon v-icon--is-component theme--light primary--text"
                  version="1.1"
                  viewBox="0 0 57 50"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="surface1"
                  >
                    <path
                      d="M 23.164062 0.632812 C 16.117188 2.175781 10.007812 7.042969 6.503906 13.925781 C 4.554688 17.800781
    4.59375 18.195312 6.929688 18.195312 L 8.761719 18.195312 L 10.121094 15.507812 C 10.941406 13.882812 12.460938
    11.828125 14.054688 10.167969 C 21.804688 2.253906 34.183594 1.976562 42.242188 9.574219 C 44.425781 11.628906
    47.5 16.140625 47.5 17.285156 C 47.5 17.640625 46.839844 17.800781 45.359375 17.800781 C 44.191406 17.800781
    43.21875 17.878906 43.21875 17.957031 C 43.21875 18.078125 44.8125 19.738281 46.800781 21.675781 L 50.382812
    25.199219 L 53.417969 21.28125 C 55.09375 19.105469 56.453125 17.246094 56.453125 17.128906 C 56.453125 17.007812
    55.441406 17.007812 54.234375 17.167969 L 51.976562 17.40625 L 50.535156 14.320312 C 45.554688 3.757812 34.457031
    -1.78125 23.164062 0.632812 Z M 23.164062 0.632812 "
                    />
                     
                    <path
                      d="M 25.308594 11.234375 C 25.308594 13.371094 25.269531 13.410156 23.90625 13.84375 C 22.542969 14.320312
    22.425781 14.28125 21.101562 12.894531 L 19.660156 11.472656 L 17.441406 13.726562 L 15.183594 15.980469
    L 16.585938 17.445312 C 17.949219 18.867188 17.988281 18.988281 17.519531 20.332031 C 17.09375 21.714844
    17.054688 21.757812 14.949219 21.757812 L 12.847656 21.757812 L 12.847656 28.085938 L 14.949219 28.085938
    C 17.054688 28.085938 17.09375 28.125 17.519531 29.507812 C 17.988281 30.894531 17.949219 31.011719 16.585938
    32.359375 L 15.183594 33.820312 L 17.402344 36.074219 L 19.621094 38.371094 L 21.0625 36.945312 C 22.464844
    35.5625 22.582031 35.523438 23.90625 35.996094 C 25.269531 36.433594 25.308594 36.472656 25.308594 38.609375
    L 25.308594 40.742188 L 31.535156 40.742188 L 31.535156 38.609375 C 31.535156 36.472656 31.574219 36.433594
    32.9375 35.996094 C 34.261719 35.523438 34.378906 35.5625 35.78125 36.945312 L 37.222656 38.371094 L 39.441406
    36.074219 L 41.660156 33.820312 L 40.257812 32.359375 C 38.894531 31.011719 38.855469 30.894531 39.324219
    29.507812 C 39.753906 28.125 39.789062 28.085938 41.894531 28.085938 L 43.996094 28.085938 L 43.996094
    21.757812 L 41.894531 21.757812 C 39.789062 21.757812 39.753906 21.714844 39.324219 20.332031 C 38.855469
    18.988281 38.894531 18.867188 40.257812 17.445312 L 41.660156 15.980469 L 39.402344 13.726562 L 37.183594
    11.472656 L 35.742188 12.894531 C 34.417969 14.28125 34.300781 14.320312 32.9375 13.84375 C 31.574219 13.410156
    31.535156 13.371094 31.535156 11.234375 L 31.535156 9.097656 L 25.308594 9.097656 Z M 31.460938 17.601562
    C 35.507812 19.34375 37.339844 24.207031 35.46875 28.285156 C 32.703125 34.335938 24.140625 34.335938 21.375
    28.285156 C 20.089844 25.433594 20.636719 21.714844 22.699219 19.421875 C 24.722656 17.207031 28.578125
    16.417969 31.460938 17.601562 Z M 31.460938 17.601562 "
                    />
                     
                    <path
                      d="M 3.699219 28.164062 C -0.195312 33.265625 -0.117188 32.992188 2.570312 32.675781 L 4.867188 32.4375
    L 6.308594 35.523438 C 8.761719 40.664062 12.730469 44.777344 17.675781 47.230469 C 29.863281 53.242188
    44.074219 48.339844 50.34375 35.917969 C 52.289062 32.042969 52.25 31.644531 49.953125 31.644531 L 48.085938
    31.644531 L 46.722656 34.335938 C 45.902344 35.957031 44.386719 38.015625 42.789062 39.675781 C 35.039062
    47.585938 22.660156 47.863281 14.601562 40.269531 C 12.421875 38.210938 9.34375 33.703125 9.34375 32.554688
    C 9.34375 32.199219 10.007812 32.042969 11.523438 32.042969 C 12.730469 32.042969 13.628906 31.921875
    13.550781 31.726562 C 13.511719 31.566406 11.875 29.90625 9.929688 28.046875 L 6.425781 24.605469
    Z M 3.699219 28.164062 "
                    />
                  </g>
                </svg>
              </td>
              <td>
                <pbehavior-actions-stub
                  pbehavior="[object Object]"
                  removable="true"
                  updatable="true"
                />
              </td>
            </tr>
            <tr>
              <!---->
              <td>
                name-3
              </td>
              <td>
                author-3
              </td>
              <td>
                <c-enabled-stub
                  value="true"
                />
              </td>
              <td>
                04/03 13:30
              </td>
              <td>
                04/03 13:33
              </td>
              <td>
                04/03/2021 13:44:51
              </td>
              <td>
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  check
                </i>
              </td>
              <td>
                type-name-3
              </td>
              <td>
                reason-name-3
              </td>
              <td>
                <i
                  aria-hidden="true"
                  class="v-icon type type-icon-name-3 theme--light primary--text"
                />
              </td>
              <td>
                <svg
                  aria-hidden="true"
                  class="settings-sync-svg-icon v-icon v-icon--is-component theme--light error--text"
                  version="1.1"
                  viewBox="0 0 57 50"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="surface1"
                  >
                    <path
                      d="M 23.164062 0.632812 C 16.117188 2.175781 10.007812 7.042969 6.503906 13.925781 C 4.554688 17.800781
    4.59375 18.195312 6.929688 18.195312 L 8.761719 18.195312 L 10.121094 15.507812 C 10.941406 13.882812 12.460938
    11.828125 14.054688 10.167969 C 21.804688 2.253906 34.183594 1.976562 42.242188 9.574219 C 44.425781 11.628906
    47.5 16.140625 47.5 17.285156 C 47.5 17.640625 46.839844 17.800781 45.359375 17.800781 C 44.191406 17.800781
    43.21875 17.878906 43.21875 17.957031 C 43.21875 18.078125 44.8125 19.738281 46.800781 21.675781 L 50.382812
    25.199219 L 53.417969 21.28125 C 55.09375 19.105469 56.453125 17.246094 56.453125 17.128906 C 56.453125 17.007812
    55.441406 17.007812 54.234375 17.167969 L 51.976562 17.40625 L 50.535156 14.320312 C 45.554688 3.757812 34.457031
    -1.78125 23.164062 0.632812 Z M 23.164062 0.632812 "
                    />
                     
                    <path
                      d="M 25.308594 11.234375 C 25.308594 13.371094 25.269531 13.410156 23.90625 13.84375 C 22.542969 14.320312
    22.425781 14.28125 21.101562 12.894531 L 19.660156 11.472656 L 17.441406 13.726562 L 15.183594 15.980469
    L 16.585938 17.445312 C 17.949219 18.867188 17.988281 18.988281 17.519531 20.332031 C 17.09375 21.714844
    17.054688 21.757812 14.949219 21.757812 L 12.847656 21.757812 L 12.847656 28.085938 L 14.949219 28.085938
    C 17.054688 28.085938 17.09375 28.125 17.519531 29.507812 C 17.988281 30.894531 17.949219 31.011719 16.585938
    32.359375 L 15.183594 33.820312 L 17.402344 36.074219 L 19.621094 38.371094 L 21.0625 36.945312 C 22.464844
    35.5625 22.582031 35.523438 23.90625 35.996094 C 25.269531 36.433594 25.308594 36.472656 25.308594 38.609375
    L 25.308594 40.742188 L 31.535156 40.742188 L 31.535156 38.609375 C 31.535156 36.472656 31.574219 36.433594
    32.9375 35.996094 C 34.261719 35.523438 34.378906 35.5625 35.78125 36.945312 L 37.222656 38.371094 L 39.441406
    36.074219 L 41.660156 33.820312 L 40.257812 32.359375 C 38.894531 31.011719 38.855469 30.894531 39.324219
    29.507812 C 39.753906 28.125 39.789062 28.085938 41.894531 28.085938 L 43.996094 28.085938 L 43.996094
    21.757812 L 41.894531 21.757812 C 39.789062 21.757812 39.753906 21.714844 39.324219 20.332031 C 38.855469
    18.988281 38.894531 18.867188 40.257812 17.445312 L 41.660156 15.980469 L 39.402344 13.726562 L 37.183594
    11.472656 L 35.742188 12.894531 C 34.417969 14.28125 34.300781 14.320312 32.9375 13.84375 C 31.574219 13.410156
    31.535156 13.371094 31.535156 11.234375 L 31.535156 9.097656 L 25.308594 9.097656 Z M 31.460938 17.601562
    C 35.507812 19.34375 37.339844 24.207031 35.46875 28.285156 C 32.703125 34.335938 24.140625 34.335938 21.375
    28.285156 C 20.089844 25.433594 20.636719 21.714844 22.699219 19.421875 C 24.722656 17.207031 28.578125
    16.417969 31.460938 17.601562 Z M 31.460938 17.601562 "
                    />
                     
                    <path
                      d="M 3.699219 28.164062 C -0.195312 33.265625 -0.117188 32.992188 2.570312 32.675781 L 4.867188 32.4375
    L 6.308594 35.523438 C 8.761719 40.664062 12.730469 44.777344 17.675781 47.230469 C 29.863281 53.242188
    44.074219 48.339844 50.34375 35.917969 C 52.289062 32.042969 52.25 31.644531 49.953125 31.644531 L 48.085938
    31.644531 L 46.722656 34.335938 C 45.902344 35.957031 44.386719 38.015625 42.789062 39.675781 C 35.039062
    47.585938 22.660156 47.863281 14.601562 40.269531 C 12.421875 38.210938 9.34375 33.703125 9.34375 32.554688
    C 9.34375 32.199219 10.007812 32.042969 11.523438 32.042969 C 12.730469 32.042969 13.628906 31.921875
    13.550781 31.726562 C 13.511719 31.566406 11.875 29.90625 9.929688 28.046875 L 6.425781 24.605469
    Z M 3.699219 28.164062 "
                    />
                  </g>
                </svg>
              </td>
              <td>
                <pbehavior-actions-stub
                  pbehavior="[object Object]"
                  removable="true"
                  updatable="true"
                />
              </td>
            </tr>
            <tr>
              <!---->
              <td>
                name-4
              </td>
              <td>
                author-4
              </td>
              <td>
                <c-enabled-stub />
              </td>
              <td>
                04/03/2021 13:30:04
              </td>
              <td>
                04/03/2021 13:33:24
              </td>
              <td>
                -
              </td>
              <td>
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  clear
                </i>
              </td>
              <td>
                type-name-4
              </td>
              <td>
                reason-name-4
              </td>
              <td>
                <i
                  aria-hidden="true"
                  class="v-icon type type-icon-name-4 theme--light primary--text"
                />
              </td>
              <td>
                <svg
                  aria-hidden="true"
                  class="settings-sync-svg-icon v-icon v-icon--is-component theme--light primary--text"
                  version="1.1"
                  viewBox="0 0 57 50"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="surface1"
                  >
                    <path
                      d="M 23.164062 0.632812 C 16.117188 2.175781 10.007812 7.042969 6.503906 13.925781 C 4.554688 17.800781
    4.59375 18.195312 6.929688 18.195312 L 8.761719 18.195312 L 10.121094 15.507812 C 10.941406 13.882812 12.460938
    11.828125 14.054688 10.167969 C 21.804688 2.253906 34.183594 1.976562 42.242188 9.574219 C 44.425781 11.628906
    47.5 16.140625 47.5 17.285156 C 47.5 17.640625 46.839844 17.800781 45.359375 17.800781 C 44.191406 17.800781
    43.21875 17.878906 43.21875 17.957031 C 43.21875 18.078125 44.8125 19.738281 46.800781 21.675781 L 50.382812
    25.199219 L 53.417969 21.28125 C 55.09375 19.105469 56.453125 17.246094 56.453125 17.128906 C 56.453125 17.007812
    55.441406 17.007812 54.234375 17.167969 L 51.976562 17.40625 L 50.535156 14.320312 C 45.554688 3.757812 34.457031
    -1.78125 23.164062 0.632812 Z M 23.164062 0.632812 "
                    />
                     
                    <path
                      d="M 25.308594 11.234375 C 25.308594 13.371094 25.269531 13.410156 23.90625 13.84375 C 22.542969 14.320312
    22.425781 14.28125 21.101562 12.894531 L 19.660156 11.472656 L 17.441406 13.726562 L 15.183594 15.980469
    L 16.585938 17.445312 C 17.949219 18.867188 17.988281 18.988281 17.519531 20.332031 C 17.09375 21.714844
    17.054688 21.757812 14.949219 21.757812 L 12.847656 21.757812 L 12.847656 28.085938 L 14.949219 28.085938
    C 17.054688 28.085938 17.09375 28.125 17.519531 29.507812 C 17.988281 30.894531 17.949219 31.011719 16.585938
    32.359375 L 15.183594 33.820312 L 17.402344 36.074219 L 19.621094 38.371094 L 21.0625 36.945312 C 22.464844
    35.5625 22.582031 35.523438 23.90625 35.996094 C 25.269531 36.433594 25.308594 36.472656 25.308594 38.609375
    L 25.308594 40.742188 L 31.535156 40.742188 L 31.535156 38.609375 C 31.535156 36.472656 31.574219 36.433594
    32.9375 35.996094 C 34.261719 35.523438 34.378906 35.5625 35.78125 36.945312 L 37.222656 38.371094 L 39.441406
    36.074219 L 41.660156 33.820312 L 40.257812 32.359375 C 38.894531 31.011719 38.855469 30.894531 39.324219
    29.507812 C 39.753906 28.125 39.789062 28.085938 41.894531 28.085938 L 43.996094 28.085938 L 43.996094
    21.757812 L 41.894531 21.757812 C 39.789062 21.757812 39.753906 21.714844 39.324219 20.332031 C 38.855469
    18.988281 38.894531 18.867188 40.257812 17.445312 L 41.660156 15.980469 L 39.402344 13.726562 L 37.183594
    11.472656 L 35.742188 12.894531 C 34.417969 14.28125 34.300781 14.320312 32.9375 13.84375 C 31.574219 13.410156
    31.535156 13.371094 31.535156 11.234375 L 31.535156 9.097656 L 25.308594 9.097656 Z M 31.460938 17.601562
    C 35.507812 19.34375 37.339844 24.207031 35.46875 28.285156 C 32.703125 34.335938 24.140625 34.335938 21.375
    28.285156 C 20.089844 25.433594 20.636719 21.714844 22.699219 19.421875 C 24.722656 17.207031 28.578125
    16.417969 31.460938 17.601562 Z M 31.460938 17.601562 "
                    />
                     
                    <path
                      d="M 3.699219 28.164062 C -0.195312 33.265625 -0.117188 32.992188 2.570312 32.675781 L 4.867188 32.4375
    L 6.308594 35.523438 C 8.761719 40.664062 12.730469 44.777344 17.675781 47.230469 C 29.863281 53.242188
    44.074219 48.339844 50.34375 35.917969 C 52.289062 32.042969 52.25 31.644531 49.953125 31.644531 L 48.085938
    31.644531 L 46.722656 34.335938 C 45.902344 35.957031 44.386719 38.015625 42.789062 39.675781 C 35.039062
    47.585938 22.660156 47.863281 14.601562 40.269531 C 12.421875 38.210938 9.34375 33.703125 9.34375 32.554688
    C 9.34375 32.199219 10.007812 32.042969 11.523438 32.042969 C 12.730469 32.042969 13.628906 31.921875
    13.550781 31.726562 C 13.511719 31.566406 11.875 29.90625 9.929688 28.046875 L 6.425781 24.605469
    Z M 3.699219 28.164062 "
                    />
                  </g>
                </svg>
              </td>
              <td>
                <pbehavior-actions-stub
                  pbehavior="[object Object]"
                  removable="true"
                  updatable="true"
                />
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="v-datatable v-table theme--light"
      >
        <div
          class="v-datatable__actions"
        >
          <div
            class="v-datatable__actions__select"
          >
            Rows per page:
            <div
              class="v-input v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
              role="combobox"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-select__slot"
                  >
                    <div
                      class="v-select__selections"
                    >
                      <div
                        class="v-select__selection v-select__selection--comma"
                      >
                        5
                      </div>
                      <input
                        aria-label="Rows per page:"
                        aria-readonly="false"
                        autocomplete="on"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-menu"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="v-datatable__actions__range-controls"
          >
            <div
              class="v-datatable__actions__pagination"
            >
              1-5 of 7
            </div>
            <button
              aria-label="Previous page"
              class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
              disabled="disabled"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  chevron_left
                </i>
              </div>
            </button>
            <button
              aria-label="Next page"
              class="v-btn v-btn--flat v-btn--icon theme--light"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  chevron_right
                </i>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`pbehaviors-simple-list Renders \`pbehaviors-simple-list\` without pbehaviors 1`] = `
<div
  class="layout column"
>
  <div
    class="layout row justify-end"
  >
    <!---->
    <c-action-fab-btn-stub
      class="ma-0"
      color="secondary"
      icon="calendar_today"
      left="left"
      small="small"
      tooltip="Periodic behaviors"
    />
  </div>
  <div
    class="c-advanced-data-table ma-0"
  >
    <div
      class="layout row wrap"
    >
      <!---->
      <!---->
    </div>
    <div>
      <div
        class="v-table__overflow"
      >
        <table
          class="v-datatable v-table theme--light"
        >
          <thead>
            <tr>
              <th
                aria-label="Name: Sorted ascending. Activate to sort descending."
                aria-sort="ascending"
                class="column active asc sortable text-xs-left"
                data-value="name"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  Name
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light v-datatable-header__icon"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Author: Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="column sortable text-xs-left"
                data-value="author.display_name"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  Author
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light v-datatable-header__icon"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Is enabled: Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="column sortable text-xs-left"
                data-value="enabled"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  Is enabled
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light v-datatable-header__icon"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Begins: Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="column sortable text-xs-left"
                data-value="tstart"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  Begins
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light v-datatable-header__icon"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Ends: Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="column sortable text-xs-left"
                data-value="tstop"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  Ends
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light v-datatable-header__icon"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="End of recurrence: Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="column sortable text-xs-left"
                data-value="rrule_end"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  End of recurrence
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light v-datatable-header__icon"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Recurrence: Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="column sortable text-xs-left"
                data-value="rrule"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  Recurrence
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light v-datatable-header__icon"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Type: Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="column sortable text-xs-left"
                data-value="type.name"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  Type
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light v-datatable-header__icon"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Reason: Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="column sortable text-xs-left"
                data-value="reason.name"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  Reason
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light v-datatable-header__icon"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
              <th
                aria-label="Icon: Not sorted. Activate to sort ascending."
                aria-sort="none"
                class="column sortable text-xs-left"
                data-value="icon"
                role="columnheader"
                scope="col"
                tabindex="0"
              >
                <div
                  class="layout align-center"
                >
                  Icon
                  <span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light v-datatable-header__icon"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </span>
                </div>
              </th>
            </tr>
            <tr
              class="v-datatable__progress"
            >
              <th
                class="column"
                colspan="10"
              />
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="text-xs-center"
                colspan="10"
              >
                No data available
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="v-datatable v-table theme--light"
      >
        <div
          class="v-datatable__actions"
        >
          <div
            class="v-datatable__actions__select"
          >
            Rows per page:
            <div
              class="v-input v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
              role="combobox"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-select__slot"
                  >
                    <div
                      class="v-select__selections"
                    >
                      <div
                        class="v-select__selection v-select__selection--comma"
                      >
                        5
                      </div>
                      <input
                        aria-label="Rows per page:"
                        aria-readonly="false"
                        autocomplete="on"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-menu"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="v-datatable__actions__range-controls"
          >
            <div
              class="v-datatable__actions__pagination"
            >
              –
            </div>
            <button
              aria-label="Previous page"
              class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
              disabled="disabled"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  chevron_left
                </i>
              </div>
            </button>
            <button
              aria-label="Next page"
              class="v-btn v-btn--disabled v-btn--flat v-btn--icon theme--light"
              disabled="disabled"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  chevron_right
                </i>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <!---->
  </div>
</div>
`;
